[gd_scene load_steps=14 format=3 uid="uid://qkrbmtb7pdia"]

[ext_resource type="Script" path="res://scene/lvl/lvl_3.gd" id="1_xwldq"]
[ext_resource type="PackedScene" uid="uid://col2mcprvqhfj" path="res://scene/player/Player.tscn" id="2_xppkr"]
[ext_resource type="Texture2D" uid="uid://6u6x1wos1t12" path="res://texture/Untitled.png" id="3_mhs0m"]
[ext_resource type="PackedScene" uid="uid://crjq6b5j1keyy" path="res://scene/props/spike.tscn" id="5_8s58d"]
[ext_resource type="PackedScene" uid="uid://bybwlposuymxo" path="res://scene/map/void.tscn" id="5_l4p2l"]
[ext_resource type="PackedScene" uid="uid://cnm4eo181jdj0" path="res://scene/menu/pausemenu.tscn" id="6_rlow5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5onjb"]
texture = ExtResource("3_mhs0m")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 14.5, 32, 14, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, 32, -32, 32)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, -0.5, -32, -9)

[sub_resource type="TileSet" id="TileSet_6a2lb"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_5onjb")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tuw0g"]
size = Vector2(64, 128)

[sub_resource type="Animation" id="Animation_nboew"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pi3od"]
resource_name = "fade_in"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_sr27x"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dm6y"]
_data = {
"RESET": SubResource("Animation_nboew"),
"fade_in": SubResource("Animation_pi3od"),
"fade_out": SubResource("Animation_sr27x")
}

[node name="lvl_3" type="Node2D"]
script = ExtResource("1_xwldq")

[node name="player" parent="." instance=ExtResource("2_xppkr")]
position = Vector2(-440, 344)
scale = Vector2(2.55103, -0.88333)

[node name="tile" type="TileMap" parent="."]
position = Vector2(8, -128)
tile_set = SubResource("TileSet_6a2lb")
format = 2
layer_0/tile_data = PackedInt32Array(-196612, 0, 0, -262142, 0, 0, 65530, 0, 0, 131066, 0, 0, 131067, 0, 0, 196603, 0, 0, 262140, 0, 0, 262141, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 196609, 0, 0, 196610, 0, 0, 131075, 0, 0, 65539, 0, 0, 3, 0, 0, 4, 0, 0, -65532, 196608, 2, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 131070, 0, 1, 131069, 0, 1, 65535, 0, 1, 0, 131072, 3, -65534, 0, 1, -131069, 0, 1, -131068, 196608, 3, 65534, 0, 1, 65537, 0, 1, 262143, 0, 1, -6, 0, 1, -7, 0, 1, -65543, 0, 1, -131073, 0, 1, -65537, 0, 1, 1, 196608, 3)

[node name="void" parent="." instance=ExtResource("5_l4p2l")]
position = Vector2(40, 1416)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(296, -192)
shape = SubResource("RectangleShape2D_tuw0g")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4dm6y")
}

[node name="ColorRect" type="ColorRect" parent="anim"]
modulate = Color(1, 1, 1, 0)
offset_left = -5744.0
offset_top = -2120.0
offset_right = -5595.0
offset_bottom = -1907.0
scale = Vector2(60.7714, 19.1838)
mouse_filter = 2

[node name="spikes" type="Node2D" parent="."]

[node name="spike" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(-120, 128)

[node name="spike2" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(8, 128)

[node name="spike3" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(136, -64)
rotation = 1.57079

[node name="spike4" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(8, -64)
rotation = 3.14159

[node name="spike6" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(72, -64)
rotation = 3.14159

[node name="spike7" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(-216, -128)

[node name="spike8" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(-56, -128)

[node name="spike10" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(-440, -256)

[node name="spike11" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(-376, -64)
rotation = -1.57079

[node name="spike12" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(200, -256)

[node name="spike13" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(264, -256)

[node name="spike14" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(136, -384)

[node name="spike15" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(-56, -320)

[node name="spike16" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(136, -320)
rotation = -1.57079

[node name="spike9" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(136, -192)

[node name="spike5" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(-184, -64)
rotation = 3.14159

[node name="spike17" parent="spikes" instance=ExtResource("5_8s58d")]
position = Vector2(200, -128)

[node name="CanvasLayer" parent="." instance=ExtResource("6_rlow5")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
